--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,20 @@ scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", branch =
 pretty_assertions = "1.3.0"
 lazy_static = "1.4.0"
 
+[profile.dev]
+opt-level = 'z'        # Optimize for size.
+lto = false            # Enable Link Time Optimization.
+codegen-units = 1      # Reduce number of codegen units to increase optimizations.
+panic = 'abort'        # Abort on panic.
+strip = true           # Strip debug info.
+overflow-checks = true # Panic in the case of an overflow.
+
 [profile.release]
-opt-level = 3          # 1, 2, 3 -> speed; 's', 'z' -> size ('z' yields smaller than 's')
+opt-level = 'z'        # Optimize for size.
 lto = true             # Enable Link Time Optimization.
 codegen-units = 1      # Reduce number of codegen units to increase optimizations.
 panic = 'abort'        # Abort on panic.
-strip = "debuginfo"    # Strip debug info.
+strip = true           # Strip the symbols.
 overflow-checks = true # Panic in the case of an overflow.
 
 [lib]
