--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ overflow-checks = true # Panic in the case of an overflow.
 
 [lib]
 crate-type = ["cdylib", "lib"]
+doctest = false
 
 [workspace]
 # Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
