Add tests for range excluded bounds of first and last element

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
-        "./examples/hello_tree/Cargo.toml"
+        "./examples/hello_tree/Cargo.toml",
+        "./integration_tests/Cargo.toml"
     ]
 }
