--- a/examples/hello_tree/Cargo.toml
+++ b/examples/hello_tree/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
-scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
-# scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", version = "1.0.3" }
+sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.0" }
+scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.0" }
+# scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", branch="main", version = "1.1.0" }
 scrypto_avltree = { path = "../.." }
 
 [dev-dependencies]
-transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
-radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
-scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
+transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.0" }
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.0" }
+scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.0" }
 
 [profile.dev]
 opt-level = 'z'        # Optimize for size.
