--- a/examples/hello_tree/Cargo.toml
+++ b/examples/hello_tree/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-# scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", branch="main", version = "1.1.0" }
+# scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", tag= "v1.1.0" }
 scrypto_avltree = { path = "../.." }
 
 [dev-dependencies]
