--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -11,7 +11,7 @@ scrypto_avltree = { path = ".." }
 [dev-dependencies]
 transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", branch = "main", version = "0.6.1" }
+scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.6.1" }
 # scrypto_testenv = { path = "../../scrypto-testenv" }
 lazy_static = "1.4.0"
 
