--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -14,6 +14,7 @@ radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1
 scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.6.1" }
 # scrypto_testenv = { path = "../../scrypto-testenv" }
 lazy_static = "1.4.0"
+rand = "0.8.5"
 
 [profile.dev]
 opt-level = 'z'        # Optimize for size.
