--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -11,10 +11,14 @@ scrypto_avltree = { path = ".." }
 [dev-dependencies]
 transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
-scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.6.1" }
+scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", branch = "lock_fee_from_faucet", version = "0.6.1" }
 # scrypto_testenv = { path = "../../scrypto-testenv" }
 lazy_static = "1.4.0"
 rand = "0.8.5"
+csv = "1.3.0"
+log = "0.4.20"
+log4rs = "1.3.0"
+test-log = "0.2.14"
 
 [profile.dev]
 opt-level = 'z'        # Optimize for size.
